--- a/styles/main.css
+++ b/styles/main.css
@@ -21,12 +21,13 @@ body {
 
 .cards-container {
     width: 90%;
-    margin: auto;
+    margin: 100px auto;
     flex-grow: 1;
     display: flex;
     color: #ffffff;
     overflow: hidden;
-    max-width: 1000px;
+    min-height: 550px;
+    max-width: 1050px;
     border-radius: 10px;
     align-items: center;
     justify-content: space-between;
@@ -61,10 +62,57 @@ body {
 }
 
 .cards-container .card p {
+    line-height: 2;
     font-size: 15px;
-    margin-bottom: 20px;
+    color: #ffffffcc;
+    margin-bottom: 80px;
 }
 
 .cards-container .card button {
-    padding: 10px 15px;
+    border: none;
+    font-size: 15px;
+    padding: 15px 35px;
+    border-radius: 50px;
+    text-transform: capitalize;
+    border: 2px solid #ffffff;
+    transition: all .5s ease-in-out;
 }
+
+.cards-container .card.sedan button {
+    color: hsl(31, 77%, 52%);
+}
+
+.cards-container .card.suv button {
+    color: hsl(184, 100%, 22%);
+}
+
+.cards-container .card.luxury button {
+    color: hsl(179, 100%, 13%);
+}
+
+.cards-container .card button:hover {
+    color: #ffffff;
+    background: transparent;
+}
+
+.attribution {
+    margin-bottom: 50px;
+    text-align: center;
+    color: hsl(179, 100%, 13%);
+}
+
+.attribution a {
+    color: #ffffff;
+    border-radius: 5px;
+    padding: 10px 15px;
+    text-decoration: none;
+    background: hsl(179, 100%, 13%);
+}
+
+/* MEDIA QUERY FOR CREENS FROM  - 1000PX */
+@media screen and (max-width: 1000px) {
+    .cards-container {
+        max-width: 500px;
+        flex-direction: column;
+    }
+  }
